// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
.sxj317c {
  border-bottom: 1px solid var(--sx-colors-tonal200);
  box-sizing: border-box;
  color: var(--sx-colors-tonal600);
  font-family: var(--sx-fonts-body);
  padding: var(--sx-space-2) var(--sx-space-3);
  text-align: left;
  vertical-align: middle;
}

tr:nth-child(even) .sxj317c {
  background: var(--sx-colors-tonal50);
}

.sxgmopz {
  background: var(--sx-colors-tertiary);
  color: white;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  line-height: 1.5;
  padding: var(--sx-space-2) var(--sx-space-3);
  text-align: left;
  vertical-align: middle;
}

.sxgmopz:first-of-type {
  border-top-left-radius: var(--sx-radii-0);
  border-bottom-left-radius: var(--sx-radii-0);
}

.sxgmopz:last-of-type {
  border-top-right-radius: var(--sx-radii-0);
  border-bottom-right-radius: var(--sx-radii-0);
}

.sxibxfj {
  width: 100%;
  font-family: var(--sx-fonts-sans);
  font-size: var(--sx-fontSizes-sm);
}

.sxibxfjk3rdf--size-md td {
  min-height: var(--sx-sizes-5);
}

.sxibxfj-a5b4a {
  height: 100px;
  width: 400px;
  color: var(--sx-colors-primary500);
}

<div>
  <table
    class="sxibxfj sxibxfjk3rdf--size-md sxibxfj-a5b4a"
  >
    <thead
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <th
          class="sxgmopz"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <td
          class="sxj317c"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <td
          class="sxj317c"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to log 1`] = `
.sxj317c {
  border-bottom: 1px solid var(--sx-colors-tonal200);
  box-sizing: border-box;
  color: var(--sx-colors-tonal600);
  font-family: var(--sx-fonts-body);
  padding: var(--sx-space-2) var(--sx-space-3);
  text-align: left;
  vertical-align: middle;
}

tr:nth-child(even) .sxj317c {
  background: var(--sx-colors-tonal50);
}

.sxgmopz {
  background: var(--sx-colors-tertiary);
  color: white;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  line-height: 1.5;
  padding: var(--sx-space-2) var(--sx-space-3);
  text-align: left;
  vertical-align: middle;
}

.sxgmopz:first-of-type {
  border-top-left-radius: var(--sx-radii-0);
  border-bottom-left-radius: var(--sx-radii-0);
}

.sxgmopz:last-of-type {
  border-top-right-radius: var(--sx-radii-0);
  border-bottom-right-radius: var(--sx-radii-0);
}

.sxibxfj {
  width: 100%;
  font-family: var(--sx-fonts-sans);
  font-size: var(--sx-fontSizes-sm);
}

.sxibxfjk3rdf--size-md td {
  min-height: var(--sx-sizes-5);
}

.sxibxfjz9c87--size-lg td {
  min-height: calc(var(--sx-sizes-5) + var(--sx-sizes-0));
}

.sxibxfj-a5b4a {
  height: 100px;
  width: 400px;
  color: var(--sx-colors-primary500);
}

<div>
  <table
    class="sxibxfj sxibxfjz9c87--size-lg sxibxfj-a5b4a"
  >
    <thead
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <th
          class="sxgmopz"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <td
          class="sxj317c"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="sx03kze"
    >
      <tr
        class="sx03kze"
      >
        <td
          class="sxj317c"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
